--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-scroll": "^1.9.0",
     "sass": "^1.69.5"
   },
